<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HitungKubus">

    <TextView
        android:id="@+id/title_hitung_kubus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginBottom="25dp"
        android:text="@string/title_hitung_kubus" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_rusuk"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_rusuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_rusuk"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_kubus_volume"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:text="@string/text_volume"
        android:onClick="hitung_volume" />

    <TextView
        android:id="@+id/kubus_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/kubus_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="24sp" />

</LinearLayout>